fix top-menu on mobile using top-left bars

--- a/faces-do-brasil/style.scss
+++ b/faces-do-brasil/style.scss
@@ -61,16 +61,13 @@ body, h3.block-title, h1, h2{
 }
 
 #top-search {
-  width: 290px;
+  width: 300px;
   float: right;
   max-height: 60px;
-  .form-group{
-    width: 200px;
-  }
 }
 
 #profile-header{
-  max-height: none;
+  max-height: 410px;
   max-width: 110%;
   margin: auto -14px;
   p{
@@ -90,36 +87,39 @@ body, h3.block-title, h1, h2{
 
 /* Top Menu */
 
-#top-menu{
-  display: none;
+.box-container-3{
   width: 100%;
-  height: 27px;
   z-index: 0;
-  margin-top: 30px;
-  ul{
-    list-style: none;
+  margin-top: 20px;
+  .navbar-toggle{
+    margin-top: -20px;
+    background-color: #b5003c;
+    &:hover{
+      background-color:  #7e002a;
+    }
   }
-  li{
-    float: left;
-    width: auto;
-    height: 40px;
-  }
-  a, a:visited{
-    background: #b5003c;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    height: 100%;
-    padding: 5px 10px;
-    color: #FFF;
-    font-size: 16px;
-    text-decoration: none;
-    -webkit-box-shadow: -5px 0px 7px 00px #550000;
-    -moz-box-shadow: -5px 0px 7px 00px #550000;
-    box-shadow: -5px 0px 7px 00px #550000;
-  }
-  a:hover{
-    color: #FFF;
-    background: #7e002a;
+  .navbar-inverse{
+    background: none;
+    border: none;
+    .navbar-nav{
+      a, a:visited{
+        background: #b5003c;
+        border-top-right-radius: 10px;
+        border-top-left-radius: 10px;
+        height: 100%;
+        padding: 5px 10px;
+        color: #FFF;
+        font-size: 16px;
+        text-decoration: none;
+        -webkit-box-shadow: -5px 0px 7px 00px #550000;
+        -moz-box-shadow: -5px 0px 7px 00px #550000;
+        box-shadow: -5px 0px 7px 00px #550000;
+      }
+      a:hover {
+        color: #FFF;
+        background: #7e002a;
+      }
+    }
   }
 }
 
@@ -129,8 +129,7 @@ body, h3.block-title, h1, h2{
 
 /* Boxes */
 
-#boxes{
-  padding-top: 15px;
+.boxes{
   -webkit-box-shadow:  0px -4px 5px rgba(85, 0, 0, 0.3);
   -moz-box-shadow:  0px -4px 5px rgba(85, 0, 0, 0.3);
   box-shadow: 0px -4px 5px rgba(85, 0, 0, 0.3);
@@ -138,7 +137,7 @@ body, h3.block-title, h1, h2{
   position: relative;
   background: url('images/bg_reciclado_topo.jpg') repeat top left;
   padding-top: 40px;
-  margin: -15px -15px;
+  margin: -22px -15px;
 }
 
 /* Box-2 */
@@ -158,12 +157,9 @@ body, h3.block-title, h1, h2{
     padding: 10px 20px;
     border: none;
   }
-  .block{
-     padding: 0;
-     h2 {
-      font-family: 'Open Sans';
-      font-size: 14px;
-     }
+  .block h2 {
+    font-family: 'Open Sans';
+    font-size: 14px;
   }
   p {
     text-align: center;
@@ -259,13 +255,14 @@ body, h3.block-title, h1, h2{
 
 /* Blog */
 #content{ 
-  .box-container-1{
+  .box-1{
     .blog-post{
-      padding-left: 4px; 
+      padding: 5px 30px;
       .title {
         border: none;
         background: #F7E5EB;
         padding: 5px 20px;
+        margin-left: -25px;
       }
       a {
         color: #000;
